Add basic entrypoint script